2025-12-26T01:38:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20513880091 # 850
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-26
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 981 1461 / 983 1463
* notice: next accum: outdated-unq outdated-all / unq all: 981 1461 / 984 1464
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-25]

2025-12-25T01:38:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20496964224 # 849
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-25
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 980 1460 / 983 1463
* notice: next accum: outdated-unq outdated-all / unq all: 981 1461 / 983 1463
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-10] / []

2025-12-23T01:38:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20448813773 # 847
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-23
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 980 1460 / 982 1462
* notice: next accum: outdated-unq outdated-all / unq all: 980 1460 / 983 1463
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-22]

2025-12-21T01:43:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20402941690 # 845