@@ -1,3 +1,12 @@
+2025-12-31T01:39:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20609914737 # 855
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-31
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 981 1461 / 984 1464
+* notice: next accum: outdated-unq outdated-all / unq all: 981 1461 / 984 1464
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2025-12-26T01:38:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20513880091 # 850
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-26
